Fix: Update form actions to point to new JS API endpoints

--- a/services/assembly-process-audit.html
+++ b/services/assembly-process-audit.html
@@ -115,7 +115,7 @@
         <div class="lead-capture-card" style="max-width: 750px; margin: 0 auto; text-align: center;">
           <h2 style="color: #111111;">📥 Download a Sample Assembly Audit Report</h2>
           <p style="color: #111111;">See an example of our visual reports. We’ll send you a real-world sample that pinpointed the root cause of chronic roller misalignment causing a production line jam.</p>
-          <form action="../api/handle-download-blog.php" method="POST" class="lead-form" onsubmit="return showSendingButton(this);">
+          <form action="../api/handle-download-blog" method="POST" class="lead-form" onsubmit="return showSendingButton(this);">
             <input type="hidden" name="document_type" value="assembly_audit_report">
             <div class="form-group">
               <input type="email" name="email" placeholder="Your Work Email" required />
