--- a/services/geometric-diagnosis.html
+++ b/services/geometric-diagnosis.html
@@ -97,7 +97,7 @@
         <div class="lead-capture-card" style="max-width: 750px; margin: 0 auto; text-align: center;">
           <h2 style="color: #111111;">📥 Receive a Sample Fit Check Report</h2>
           <p style="color: #111111;">See how we pinpoint problems before they hit the floor. We’ll send you a sample PDF used in real geometry diagnostics.</p>
-          <form action="../api/handle-download-blog.php" method="POST" class="lead-form" onsubmit="return showSendingButton(this);"  >
+          <form action="../api/handle-download-blog" method="POST" class="lead-form" onsubmit="return showSendingButton(this);"  >
             <input type="hidden" name="document_type" value="pre_assembly">
             <div class="form-group">
               <input type="email" name="email" placeholder="Your Work Email" required />
