--- a/services/prototype-manufacturing.html
+++ b/services/prototype-manufacturing.html
@@ -99,7 +99,7 @@
         <div class="lead-capture-card" style="max-width: 750px; margin: 0 auto; text-align: center;">
           <h2 style="color: #111111;">📥 Request a Sample Prototype Report</h2>
           <p style="color: #111111;">See how we document feedback loops from prototype to CAD. We’ll send you a report sample from a recent geometric validation build.</p>
-          <form action="../api/handle-download-blog.php" method="POST" class="lead-form" onsubmit="return showSendingButton(this);">
+          <form action="../api/handle-download-blog" method="POST" class="lead-form" onsubmit="return showSendingButton(this);">
             <input type="hidden" name="document_type" value="prototype_report">
             <div class="form-group">
               <input type="email" name="email" placeholder="Your Work Email" required />
