migrate email functions to serverless API

--- a/drop/fix/Stress-Path-Misfit-Analysis.html
+++ b/drop/fix/Stress-Path-Misfit-Analysis.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 动态设置页面标题 -->
-    <title>Fix Kit: Coating-Induced Fit Jam - Gorgeo Fasteners</title>
+    <title>Fix Kit: Stress Path Misfit Analysis - Gorgeo Fasteners</title>
     <!-- 确保这里的路径是正确的，相对于网站根目录 -->
     <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
@@ -18,23 +18,23 @@
         <div class="container" style="max-width: 600px; margin: 0 auto; text-align: center;">
 
             <!-- 动态填充标题 -->
-            <h1>Fix Kit: Coating-Induced Fit Jam</h1>
+            <h1>Fix Kit: Stress Path Misfit Analysis</h1>
 
             <!-- 动态填充价值描述 -->
             <ul style="text-align: left; display: inline-block; margin-top: 20px; margin-bottom: 40px; list-style-position: inside; padding-left: 0;">
-                                    <li style="margin-bottom: 10px;">Includes a step-by-step diagnostic checklist for tolerance issues.</li>
-                                    <li style="margin-bottom: 10px;">Features before/after sketches from a real-world failure case.</li>
-                                    <li style="margin-bottom: 10px;">Learn to spot hidden geometric traps caused by paint, plating, or other coatings.</li>
+                                    <li style="margin-bottom: 10px;">Includes our proprietary checklist for auditing dynamic load stability.</li>
+                                    <li style="margin-bottom: 10px;">Features diagrams illustrating correct vs. incorrect force paths in bolted joints.</li>
+                                    <li style="margin-bottom: 10px;">Learn the geometry-first principles to prevent fatigue fracture at the design stage.</li>
                             </ul>
 
             <div class="card" style="padding: 30px; border: 1px solid #e9ecef; border-radius: 8px;">
                 <!-- 动态填充表单标题 -->
-                <h3 style="margin-top: 0;">Get Your Fix Kit Instantly</h3>
+                <h3 style="margin-top: 0;">Get Your Analysis Kit Instantly</h3>
                 
                 <!-- 确保action路径正确，相对于网站根目录 -->
                 <form action="../../api/handle-download-blog" method="POST">
                     <!-- 关键一步：隐藏字段，告诉后端要发送哪个资料 -->
-                    <input type="hidden" name="document_type" value="coating_fit_jam_kit">
+                    <input type="hidden" name="document_type" value="stress_path_analysis_kit">
                     
                     <div class="form-group">
                         <input type="email" name="email" placeholder="Your Work Email" required>
