--- a/_sidebar-applications.html
+++ b/_sidebar-applications.html
@@ -12,8 +12,8 @@
   <div class="sidebar-widget">
   <h4>Get Our Engineering Fix Kits</h4>
   <ul>
-    <li><a href="/drop/coating-fit-jam/"><strong>Fix Kit:</strong> Coating-Induced Fit Jam</a></li>
-    <li><a href="/drop/stress-path-analysis/"><strong>Fix Kit:</strong> Stress Path Misfit Analysis</a></li>
+    <li><a href="/drop/fix/Coating-Induced-Fit-Jam.html"><strong>Fix Kit:</strong> Coating-Induced Fit Jam</a></li>
+    <li><a href="/drop/fix/Stress-Path-Misfit-Analysis.html"><strong>Fix Kit:</strong> Stress Path Misfit Analysis</a></li>
   </ul>
 </div>
 
